# rigout

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_STANDARDS.md  LICENSE  LIVE_MCP_TEST_FINDINGS.md  QUICK_REFERENCE.md  README.md  RELEASE.md  REPOSITORY_STRUCTURE.md  SECURITY.md  TROUBLESHOOTING.md  URL_MCP_SERVER.md  diagnose.sh  production_validation.py  pyproject.toml  requirements.txt  rigout.ps1  rigout.sh
.github/: CODEOWNERS  dependabot.yml  jules-review-rules.md  pull_request_template.md
.github/workflows/: agent-audit.yml  auto-merge.yml  ci.yml  pr-review.yml  release.yml
scripts/: agent_audit.py  jules_review.py
src/rigout/: __init__.py  _version.py  config_manager.py  lifecycle.py  mcp_http_server.py  mcp_url_launcher.py  mcp_workspace_manager.py  security_validator.py  server.py  ssh_manager.py  terminal_session.py
src/rigout/tools/: __init__.py  _results.py  activity.py  command.py  docker.py  environment.py  file_ops.py  monitoring.py  tunnel.py
tests/: README.md  conftest.py
tests/integration/: __init__.py  test_connection.py  test_flexibility.py  test_http_transport.py  test_mcp_server.py  test_stdio_transport.py
tests/unit/: __init__.py  test_agent_audit.py  test_config_manager.py  test_jules_review.py  test_lifecycle_cli.py  test_mcp_url_launcher.py  test_production_validation.py  test_security_validator.py  test_server_activity.py  test_server_metadata.py  test_ssh_manager.py  test_tool_handlers.py  test_workflow_security.py
